--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "gulp-debug": "^4.0.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^6.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-svg-sprite": "^1.5.0",
+    "gulp-webp": "^4.0.1",
     "require-dir": "^1.2.0",
     "webpack-stream": "^5.2.1"
   },
